--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index.js --inspect",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env NODE_ENV=production node index",
+    "dev"  : "cross-env NODE_ENV=development nodemon --inspect",
+    "test" : "cross-env NODE_ENV=test echo \"Error: no test specified\"&& exit 1"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
     "express": "^4.17.1"
   }
 }
