--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node index",
-    "dev"  : "cross-env NODE_ENV=development nodemon --inspect",
-    "test" : "cross-env NODE_ENV=test echo \"Error: no test specified\"&& exit 1"
+    "dev": "cross-env NODE_ENV=development nodemon --inspect",
+    "test": "cross-env NODE_ENV=test echo \"Error: no test specified\"&& exit 1"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   }
 }
